--- a/core.css
+++ b/core.css
@@ -1,5 +1,5 @@
 :root{
-    --background: url('https://images.alphacoders.com/632/632525.png');
+    --background: url('https://cdn.discordapp.com/attachments/1161816109738119188/1175168975173337138/static.png?ex=656a4065&is=6557cb65&hm=56f55570aa75a6f3495503a13c82e0db479172f9e8fa9a1883276a03c5e70cdf&');
     --activetext-colour: white;
 
     --primary1-colour: red;
